# arxiv-research-agent

./: .dockerignore  .gitignore  CLAUDE-Agent-Proj-1.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  eval-nightly.yml
docs/: README.md  demo.md  development.md  eval.md  security.md  testing.md
docs/agents/: query_refiner.md  reader.md  supervisor.md  synthesizer.md  verifier.md
docs/decisions/: 0001-use-anthropic-sdk-directly.md  0002-section-aware-chunker.md  0003-chunk-ranker-max-similarity.md  0004-reader-fulltext-with-abstract-fallback.md  0005-custom-eval-over-ragas.md  0006-completeness-batched-judge.md  0007-faithfulness-single-call-abstracts.md  0008-eval-runner-sequential-per-query-isolation.md  0009-anthropic-sdk-native-retry.md  0010-nightly-eval-ci.md  0011-pydantic-settings-typed-config.md  0012-observability-core-logging-costs.md  0013-sprint-1-finish-retry-checkpoint-tracing-recall.md  0014-supervisor-loop-behind-flag.md  0015-verifier-agent-runtime-faithfulness.md  0016-evidence-store-source-text-verifier.md  0017-synthesizer-evidence-swap.md  0018-query-refiner-recovery-action.md  0019-reader-requests-more-chunks.md  0020-prompt-injection-isolation-reader.md  0021-cost-aware-model-routing.md  0022-anthropic-prompt-caching.md  0023-semantic-scholar-citation-graph.md  0024-pr-ci-lint-mypy-tests.md  0025-fastapi-async-job-model.md  0026-sse-streaming-endpoint.md  0027-docker-compose-redis-job-store.md  0028-postgres-paper-cache-and-embedding-cache.md  0029-demo-ui-vanilla-html-mount.md  0029-nextjs-web-ui.md  0030-hitl-plan-review.md  0031-multi-format-export.md  0032-conversation-mode.md  0033-safety-hardening-bundle.md  0034-postgres-checkpointer-and-cross-worker-hitl.md  0035-cross-worker-sse-pubsub.md  0036-per-principal-store-scoping.md  0037-redis-rate-limiter-and-keystore-reload.md  README.md  TEMPLATE.md
planning/: 01-enterprise-gaps.md  02-feature-ideas.md  03-roadmap.md  04-architecture-refactors.md  05-agentic-upgrade-plan.md  06-portfolio-polish.md  README.md
src/: config.py  llm.py  main.py
src/agents/: critic.py  planner.py  query_refiner.py  reader.py  search.py  supervisor.py  synthesizer.py  verifier.py
src/api/: __init__.py  app.py  auth.py  conversations.py  jobs.py  redis_store.py  retriever.py  routes.py  runner.py  schemas.py  serve.py  streaming.py
src/api/exporters/: __init__.py  docx.py  markdown.py  pdf.py
src/api/ui/: app.js  index.html  style.css
src/eval/: benchmark_queries.py  metrics.py  readme_update.py  regression_diff.py  runner.py
src/graph/: state.py  workflow.py
src/observability/: __init__.py  costs.py  logging.py  tracing.py
src/security/: __init__.py  prompt_isolation.py
src/tools/: arxiv_search.py  chunk_ranker.py  chunker.py  embedding_cache.py  embeddings.py  http_session.py  paper_cache.py  pdf_parser.py  postgres_pool.py  semantic_scholar.py
tests/: test_agent_cache_flag.py  test_agent_model_routing.py  test_api_auth.py  test_api_conversations.py  test_api_export_route.py  test_api_exporters.py  test_api_hitl.py  test_api_jobs.py  test_api_redis_store.py  test_api_retriever.py  test_api_routes.py  test_api_streaming.py  test_api_ui.py  test_arxiv_search.py  test_benchmark_queries.py  test_chunk_ranker.py  test_chunker.py  test_config.py  test_embedding_cache.py  test_eval_runner.py  test_hitl_cross_worker_resume.py  test_http_session.py  test_keystore_reloader.py  test_llm.py  test_metrics_citation_accuracy.py  test_metrics_completeness.py  test_metrics_faithfulness.py  test_metrics_retrieval_recall.py  test_observability.py  test_paper_cache.py  test_pdf_parser.py  test_per_principal_scoping.py  test_planner_prior_context.py  test_prompt_isolation.py  test_query_refiner.py  test_reader.py  test_reader_isolation.py  test_reader_recovery.py  test_readme_update.py  test_redis_rate_limiter.py  (+12 more)
web/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.setup.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/c/[id]/: page.tsx
web/components/: ConversationSidebar.tsx  ConversationThread.tsx  ConversationsShell.tsx  EventLog.tsx  ExportDropdown.tsx  JobSummary.tsx  PlanReview.tsx  QueryForm.tsx  ReportView.tsx  ResearchApp.tsx
web/lib/: api.ts  types.ts  useResearchStream.ts
web/tests/: ConversationSidebar.test.tsx  EventLog.test.tsx  ExportDropdown.test.tsx  JobSummary.test.tsx  PlanReview.test.tsx  QueryForm.test.tsx  ReportView.test.tsx  api.test.ts  conversationsApi.test.ts
