[project]
name = "arxiv-research-agent"
version = "0.1.0"
description = "Multi-agent research assistant for ML/AI papers"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "arxiv>=2.1.0",
    "requests>=2.32.0",
    "PyMuPDF>=1.24.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.8.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
